# caplang

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Expression.hh  Filename.hh  FlagList.hh  Function.hh  LICENSE  Makefile  ParseDeclaration.cc  ParseExpression.cc  ParseImport.cc  Program.cc  Program.hh  README.md  Scope.cc  Scope.hh  SourceFile.cc  SourceFile.hh  SyntaxTreeNode.cc  SyntaxTreeNode.hh  Token.cc  Token.hh  TokenizedSource.cc  TokenizedSource.hh  Type.cc  Type.hh  Variable.hh  main.cc  sandbox.cc  test.cap  test.cc
cap/: ArgumentAccessor.cc  BinaryOperator.cc  BracketOperator.cc  Builtin.cc  CMakeLists.txt  CallableType.cc  ClassType.cc  Client.cc  CodeGenerator.cc  CodeGenerator.hh  Debug.hh  Declaration.cc  DeclarationStorage.cc  EventEmitter.cc  Expression.cc  FlagList.hh  Function.cc  Function.hh  Identifier.cc  Integer.cc  Logger.cc  Logger.hh  Makefile  ModifierRoot.cc  Node.cc  ParameterAccessor.cc  ParseDeclaration.cc  ParseExpression.cc  ParseImport.cc  ParseLine.cc  ParseMisc.cc  Parser.cc  PrimitiveType.cc  Program.cc  README.md  Reference.cc  Return.cc  Scope.cc  Scope.hh  Signature.cc  (+23 more)
cap/arch/: Base.cc  Base.hh  Test.cc  Test.hh  X86Intel.cc  X86Intel.hh
cap/node/: AliasDefinition.cc  (+16 more)
docs/: attributes.md  precedence.drawio
example/: SDL2.l  SDL2Window.l  SDL2WindowImpl.l  abc.l  decl.l  error.l  main.l  test.l
extra/: .gitignore  testinterpreter.cc
libcap/: BraceMatcher.cc  CMakeLists.txt  EventEmitter.cc  Function.cc  Node.cc  ParserState.cc  PrimitiveType.cc  Scope.cc  SourceFile.cc  Token.cc  Tokenizer.cc  Type.cc
src/: ArgumentAccessor.cc  Attribute.cc  BinaryOperator.cc  BracketOperator.cc  Builtin.cc  CallableType.cc  ClassType.cc  Client.cc  Conversion.cc  Declaration.cc  DeclarationStorage.cc  Expression.cc  Function.cc  Identifier.cc  Integer.cc  ModifierRoot.cc  Node.cc  ParserContext.cc  Return.cc  Scope.cc  Source.cc  Statement.cc  String.cc  Token.cc  Traverser.cc  TypeContext.cc  TypeDefinition.cc  UnaryOperator.cc  Validator.cc  Value.cc  Variable.cc
test/: CMakeLists.txt  DynamicSource.cc  ErrorTests.cc  ExecutionStructureTests.cc  Expect.cc  ExpressionTests.cc  IsolatedTester.cc  NodeMatcher.cc  ParserTests.cc  SourceString.cc  TokenTests.cc  ValidationTests.cc  ValueCheck.cc  captests.cc  main.cc
test/include/cap/test/: CapTest.hh  DynamicSource.hh  Expect.hh  IsolatedTester.hh  NodeMatcher.hh  SourceString.hh  ValueCheck.hh
test/src/: AttributeTests.cc  CapTest.cc  DeclarationTests.cc  DynamicSource.cc  ExpressionTests.cc  FunctionTests.cc  NodeMatcher.cc  ReturnTests.cc  TokenTests.cc  TypeReferenceTests.cc  TypeTests.cc  ValidationTests.cc  VariableTests.cc
(+152 files in other folders)
